website/pages/components/Errors/examples/FormOptions.jsx
import { Form, Field, Errors, Submit } from '../../../../../lib/index.js'

{/* START */}
import React from 'react'
// PRETEND: import { Form, Field, Errors, Submit } from '@abw/react-formula'

const FormOptions = () =>
  <Form
    errorsTitle="Custom Errors Title"
    errorsPrompt="Custom errors prompt"
  >
    <Field name="one"   label="Field one" required/>
    <Field name="two"   label="Field two" required/>
    <Field name="three" label="Field three"/>
    <Errors/>
    <Submit/>
  </Form>

export default FormOptions